feat: add app stats

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,22 @@
   transform: translate(-50%, -50%);
 }
 
+.btn-play-now {
+  position: absolute;
+  top: 93.5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.card-stat {
+  width: 349.785px;
+  height: 412.329px;
+  border-radius: 13.899px;
+  border: 2.316px solid #A1A1A1;
+  background: url(https://s3-alpha-sig.figma.com/img/90c7/fd43/4121ddbb99cc05d8a017e4639b6570c9?Expires=1697414400&Signature=CV4a7u5oXwfv-BMy6WhCGk~QJrI8OW5KFDPYV7FJlRBpKvtvlAvVLVP7ySJpFO-xG45AY11wau99UOAuEveCi9fEbXOHohIoJUATxm4YuCuDalnriYmdTgM2asFpDbYYIJCDrB2PC0nuuTvmid17~s~yeAz9y107k8G6lvcS9qIQDLjn5bsxt3nk3g3APKgVVJVXdwjq3UwgAxDvoHE8VVfh2ngdME61FVguwPhFgBQAIdpPqEg7CcpOiLbEB1TA~T7QIrP-QNFXwIFqu5X9IzB7GPvT~E8alEOlLR1d89pKJFh5aldUv~idUPafDZ-HJ4nebWIXOELfVJFbhhKfDA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray -452.886px 0px / 266.667% 127.247% no-repeat;
+  backdrop-filter: blur(46.3291130065918px);
+}
+
 @media only screen and (width <= 712px) {
   #root {
     padding-right: 0.5rem;
