--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 html {
 
   --bg-gradient-dark: linear-gradient(90deg, #C1260F 0.34%, #EE642A 96.66%);
+  --md-space: 2rem;
 }
 
 :root {
@@ -15,7 +16,7 @@ html {
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,6 +25,7 @@ html {
   -webkit-text-size-adjust: 100%;
 
   --bg-gradient: var(--bg-gradient-dark);
+  --gap: var(--md-space);
 }
 
 @media (prefers-color-scheme: light) {
