--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ li.scroll-container {
 }
 li.scroll-container img {
   padding: 5px;
-  @apply w-[80%] md:w-[40%];
+  @apply w-full md:w-[50%];
 }
 
 .masonry-grid div:nth-child(2) {
