--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 #root {
   @apply max-w-screen-lg;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0;
+}
+
+section {
+  padding: 0 1rem;
 }
 
 .heading-title {
@@ -43,22 +47,25 @@
 details summary > * {
   display: inline;
 }
+summary::marker {
+  content: url(/svg/summary-close.svg);
+}
 [open] summary::marker {
   content: url(/svg/summary-open.svg);
 }
 [open] summary {
   position: relative;
   cursor: pointer;
-  @apply whitespace-pre-wrap border-b-0 bg-collection-detail bg-center bg-no-repeat h-20 pt-[2rem] ps-3 md:ps-6 lg:ps-8;
+  @apply whitespace-pre-wrap border-b-0 bg-collection-detail bg-center bg-no-repeat h-20 pt-[2rem] ps-2 md:ps-6 lg:ps-8;
 }
 summary {
   position: relative;
   cursor: pointer;
-  @apply md:w-[550px] mx-auto border-b border-gray-600 bg-center bg-no-repeat h-20 pt-[2rem] ps-3 md:ps-6 lg:ps-8;
+  @apply md:w-[550px] mx-auto border-b border-gray-600 bg-center bg-no-repeat h-20 pt-[2rem] ps-2 md:ps-6 lg:ps-8;
 }
 
 summary > span {
-  @apply absolute w-full top-[36%] left-[40px] md:top-[33%] md:left-[60px] lg:left-[70px] md:text-xl;
+  @apply absolute max-w-lg top-[36%] left-[40px] md:top-[33%] md:left-[60px] lg:left-[70px] text-sm md:text-xl;
 }
 
 details > p {
@@ -112,7 +119,6 @@ li.scroll-container img {
 
 @media only screen and (width <= 712px) {
   #root {
-    /*padding: 0 0.5rem;*/
     margin: 0;
   }
 }
