--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 html {
   --bg-gradient-dark: linear-gradient(90deg, #C1260F 0.34%, #EE642A 96.66%);
+  --red-dark: #C1260F;
+  --orange-dark: #EE642A;
   --md-space: 2rem;
 }
 
@@ -25,6 +27,8 @@ html {
 
   --bg-gradient: var(--bg-gradient-dark);
   --gap: var(--md-space);
+  --red: var(--red-dark);
+  --orange: var(--orange-dark);
 }
 
 @media (prefers-color-scheme: light) {
